<resources>

    <string name="app_name">WorkingTime</string>
    <string name="action_export">Export to external SD</string>
    <string name="action_inport">Inport from external SD</string>
    <string name="lastInStr">Last In:</string>
    <string name="balanceStr">Balance:</string>
    <string name="badgeInStr">Badge In</string>
    <string name="badgeOutStr">Badge Out</string>
    <string name="saveStr">Save on Database</string>
    <string name="viewStr">View Database</string>
    <string name="badgeOutAlertOK">OK</string>
    <string name="badgeOutAlertNO">NO</string>
    <string name="badgeOutAlertTitle">Are you sure?</string>
    <string name="badgeOutAlertMsg">Calculate the new balance?</string>
    <string name="restoredFromDB">Restored from DB!</string>
    <string name="storeAlertOK">OK</string>
    <string name="storeAlertNO">NO</string>
    <string name="storeAlertTitle">Are you sure?</string>
    <string name="storeAlertMsg">Do you want to store the balance?</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="ok">OK</string>
    <string name="reportTitle">Report</string>
    <string name="settings">Settings</string>
	<string name="prefMainGroup">Preferences</string>
	<string name="prefToExternalSDTitle">Save on External SD</string>
	<string name="prefToExternalSDDesc">Save the balance informations on the External SD</string>
</resources>
