<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:text="@string/lastInStr"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewLastIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_marginLeft="22dp"
        android:layout_toRightOf="@+id/textView2"
        android:text="-"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="17dp"
        android:text="@string/balanceStr"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/textViewLastIn"
        android:text="-"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/badgeInButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:onClick="badgeIn"
        android:text="@string/badgeInStr" />

    <Button
        android:id="@+id/badgeOutButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/badgeInButton"
        android:layout_below="@+id/badgeInButton"
        android:onClick="badgeOut"
        android:text="@string/badgeOutStr" />

    <Button
        android:id="@+id/storeButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/badgeOutButton"
        android:layout_below="@+id/badgeOutButton"
        android:onClick="store"
        android:text="@string/saveStr" />

    <Button
        android:id="@+id/viewButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/storeButton"
        android:layout_below="@+id/storeButton"
        android:text="@string/viewStr" />
    
</RelativeLayout>